--- a/YoutubeDL/storyboards/FilesizeButton.xib
+++ b/YoutubeDL/storyboards/FilesizeButton.xib
@@ -10,26 +10,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilesizeButton" customModule="YoutubeDL" customModuleProvider="target">
             <connections>
+                <outlet property="backgroundView" destination="iN0-l3-epB" id="HfC-y5-z2M"/>
                 <outlet property="dimensions" destination="Xu0-BM-yBM" id="FjM-jt-Frt"/>
                 <outlet property="filesize" destination="Imd-Af-Y4T" id="5Yx-bp-KW8"/>
+                <outlet property="press" destination="L1s-Ie-Jaq" id="7JQ-sw-UTq"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="231" height="231"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="148"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnS-qr-l4s">
-                    <rect key="frame" x="80.5" y="71" width="70" height="89"/>
+                    <rect key="frame" x="40" y="43" width="70" height="62"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="300x400" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xu0-BM-yBM" userLabel="dimensions">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="300x400" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Xu0-BM-yBM" userLabel="dimensions">
                             <rect key="frame" x="0.0" y="0.0" width="70" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 KB" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imd-Af-Y4T" userLabel="filesize">
-                            <rect key="frame" x="0.0" y="68" width="70" height="21"/>
+                            <rect key="frame" x="0.0" y="41" width="70" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -40,46 +42,35 @@
                         <constraint firstItem="Imd-Af-Y4T" firstAttribute="width" secondItem="bnS-qr-l4s" secondAttribute="width" priority="750" id="1iP-Vc-61h"/>
                         <constraint firstItem="Xu0-BM-yBM" firstAttribute="width" secondItem="bnS-qr-l4s" secondAttribute="width" priority="750" id="5aE-cJ-7WP"/>
                         <constraint firstAttribute="bottom" secondItem="Imd-Af-Y4T" secondAttribute="bottom" id="CU8-Lp-eVu"/>
-                        <constraint firstItem="Imd-Af-Y4T" firstAttribute="top" secondItem="Xu0-BM-yBM" secondAttribute="bottom" constant="47" id="GZd-F0-fxG"/>
+                        <constraint firstItem="Imd-Af-Y4T" firstAttribute="top" secondItem="Xu0-BM-yBM" secondAttribute="bottom" constant="20" id="GZd-F0-fxG"/>
                         <constraint firstItem="Imd-Af-Y4T" firstAttribute="centerX" secondItem="bnS-qr-l4s" secondAttribute="centerX" id="oOb-87-2Gn"/>
                         <constraint firstItem="Xu0-BM-yBM" firstAttribute="top" secondItem="bnS-qr-l4s" secondAttribute="top" id="yY5-9a-MGB"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemGray3Color"/>
+            <gestureRecognizers/>
             <constraints>
                 <constraint firstItem="bnS-qr-l4s" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Fe0-n6-Bxt"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bnS-qr-l4s" secondAttribute="trailing" constant="8" id="Oyp-rU-Flu"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bnS-qr-l4s" secondAttribute="bottom" constant="8" id="R3y-xJ-gf5"/>
+                <constraint firstItem="bnS-qr-l4s" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="als-ve-SAE"/>
                 <constraint firstItem="bnS-qr-l4s" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="tVv-Vq-wms"/>
+                <constraint firstItem="bnS-qr-l4s" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="uhT-ff-YUd"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <userDefinedRuntimeAttributes>
-                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                    <real key="value" value="8"/>
-                </userDefinedRuntimeAttribute>
-                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                    <real key="value" value="5"/>
-                </userDefinedRuntimeAttribute>
-                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
-                    <size key="value" width="0.0" height="4"/>
-                </userDefinedRuntimeAttribute>
-                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                    <color key="value" systemColor="systemGray4Color"/>
-                </userDefinedRuntimeAttribute>
-                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
-                    <real key="value" value="0.5"/>
-                </userDefinedRuntimeAttribute>
-            </userDefinedRuntimeAttributes>
-            <point key="canvasLocation" x="31.159420289855074" y="-147.65625"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="L1s-Ie-Jaq" appends="YES" id="GIl-rT-kMm"/>
+            </connections>
+            <point key="canvasLocation" x="-78" y="-208"/>
         </view>
+        <pongPressGestureRecognizer allowableMovement="100" minimumPressDuration="0.0" id="L1s-Ie-Jaq"/>
     </objects>
     <resources>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
